--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,13 @@
 button {
 	margin: 5px;
+	margin-top: 20px;
+	margin-left: 20px;
 	background-color: #3b33ad;
 	border-color: #3b33ad;
 	padding: 10px;
 	color: white;
 	font-size: 15px;
+	border-radius: 15px;
 
 
 }
@@ -21,10 +24,38 @@ button:active {
 p {
 	font-size: 20px;
 	color: white;
+	margin-left: 15px;
 
 }
 
 img {
 	max-width: 300px;
-	margin: 10px;
+	margin: 15px;
+}
+
+#anime-form {
+	float: right;
+	margin-right: 200px;
+	margin-top: 30px;
+	font-size: 25px;
+	color: white;
+}
+
+input {
+	width: 200px;
+	height: 26px;
+ }
+
+#add-anime {
+	margin-top: 10px;
+	font-size: 15px;
+	color: white;
+	background-color: #266579;
+	border-color: #266579;
+
+}
+
+#add-anime:hover {
+	cursor: pointer;
+	background-color: #3a8fab
 }
