--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,20 +17,20 @@ button:hover {
 	background-color: #5c53dc;
 }
 
-button:active {
-	background-color: #3b33ad;
-}
 
 p {
 	font-size: 20px;
 	color: white;
 	margin-left: 15px;
+	
+
 
 }
 
 img {
-	max-width: 300px;
+	width: 300px;
 	margin: 15px;
+	
 }
 
 #anime-form {
